--- a/ecom/templates/footer.html
+++ b/ecom/templates/footer.html
@@ -26,8 +26,8 @@
             <ul class="list-unstyled">
               <li><a href="" class="py-2 d-block">Home</a></li>
               <li><a href="/shop/" class="py-2 d-block">Shop</a></li>
-              <li><a href="#" class="py-2 d-block">About us</a></li>
-              <li><a href="#" class="py-2 d-block">Contact Us</a></li>
+              <li><a href="/about_us/" class="py-2 d-block">About us</a></li>
+              <li><a href="/contact_us/" class="py-2 d-block">Contact Us</a></li>
             </ul>
           </div>
         </div>
@@ -36,7 +36,7 @@
             <h2 class="ftco-heading-2">Help</h2>
             <div class="d-flex">
                 <ul class="list-unstyled mr-l-5 pr-l-3 mr-4">
-                  <li><a href="#" class="py-2 d-block">Contact</a></li>
+                  <li><a href="/contact_us/" class="py-2 d-block">Contact</a></li>
                   <li><a href="#" class="py-2 d-block">Returns &amp; Exchange</a></li>
                   <li><a href="#" class="py-2 d-block">Terms &amp; Conditions</a></li>
                   <li><a href="#" class="py-2 d-block">Privacy Policy</a></li>
@@ -49,9 +49,9 @@
               <h2 class="ftco-heading-2">Have a Questions?</h2>
               <div class="block-23 mb-3">
                 <ul>
-                  <li><span class="icon icon-map-marker"></span><span class="text">Shoezy near highlight mall , Panthirankavu ,Koyikode,Kerala,India</span></li>
-                  <li><a href="#"><span class="icon icon-phone"></span><span class="text">+91 7510875454</span></a></li>
-                  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">shoezymain@gmail.com</span></a></li>
+                  <li><span class="icon icon-map-marker"></span><span class="text">Shoezy near highlight mall , Panthirankavu ,Kozhikode,Kerala,India</span></li>
+                  <li><a href="/contact_us/"><span class="icon icon-phone"></span><span class="text">+91 7510875454</span></a></li>
+                  <li><a href="/contact_us/"><span class="icon icon-envelope"></span><span class="text">shoezymain@gmail.com</span></a></li>
                 </ul>
               </div>
           </div>
@@ -61,7 +61,7 @@
         <div class="col-md-12 text-center">
 
           <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        Copyright &copy; 2023 All rights reserved | This template is made  by <a href="https://colorlib.com" target="_blank">Sajal</a>
+                        Copyright &copy; 2023 All rights reserved | This template is made  by <a href="#" target="_blank">Sajal</a>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                       </p>
         </div>
