--- a/ecom/templates/shop/shop.html
+++ b/ecom/templates/shop/shop.html
@@ -9,61 +9,59 @@
 
 <!-- END nav -->
 {% block maincontent %}
-<h1 class="mb-0 bread text-center">SHOP</h1>
+
    
-    <section class="ftco-section bg-light">
-    	<div class="container">
-    		<div class="row">
-    			<div class="col-md-8 col-lg-10 order-md-last">
-    				<div class="row">
-
-
-						
-
-		    			<div class="col-sm-12 col-md-12 col-lg-4  d-flex">
-		    				<div class="product d-flex flex-column">
-                                <a href="/singleproduct/" class="img-prod"><img class="img-fluid" src={% static 'images/pumashoee.jpg' %} alt="puma shoe">
-		    						<span class="status">50% Off</span>
+<section class="ftco-section bg-light" >
+    <h1 class=" text-center scs">SHOP</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-lg-10 order-md-last ">
+                <div class="row">
+                    {% for prod in product %}
+                        <div class="col-sm-12 col-md-6 col-lg-4 d-flex  ">
+                            <div class="product d-flex flex-column align-items-baseline justify-content-center align-content-center">
+                                <a href="/singleproduct/{{prod.id}}" class="img-prod "><img class="img-fluid" src="{{prod.image1.url}}" alt="shoe">
+                                    <span class="status">50% Off</span>
                                     <div class="overlay"></div>
-		    					</a>
-		    					<div class="text py-3 pb-4 px-3">
-									
-		    						<h3><a href="/singleproduct/">Puma Vegas high top</a></h3>
-		    						<div class="pricing">
-                                        <p class="price"><span class="mr-2 price-dc">₹2000</span><span class="price-sale">₹1000</span></p>
-			    					</div>
-			    					<p class="bottom-area d-flex px-3">
-		    							<a href="#" class="add-to-cart text-center py-2 mr-1"><span>Add to cart <i class="ion-ios-cart ml-1"></i></span></a>
-    							        <a href="#" class="buy-now text-center py-2">Add to wish<span><i class="ion-ios-heart ml-1"></i></span></a>
-		    						</p>
-		    					</div>
-		    				</div>
-		    			</div>
+                                </a>
+                                <div class="text py-3 pb-4 px-3  ">
+                                    <h3><a href="/singleproduct/{{prod.id}}">{% for brad in brand  %}{% if prod.brand_id == brad.id %}{{brad.brand_name}}{% endif %}{% endfor %} &nbsp; {{prod.name}}</a></h3>
+                                    <div class="pricing">
+                                        <p class="price"><span class="mr-2 price-dc">₹{{prod.original_price}}</span><span class="price-sale">₹{{prod.selling_price}}</span></p>
+                                    </div>
+                                    <p class="bottom-area d-flex px-3">
+                                        {% if prod.id in cart_item   %}
+                                        <a href="/cart/" class="add-to-cart text-center py-2 mr-1"><span>view cart <i class="ion-ios-cart ml-1"></i></span></a>
+                                        {% else %}
+                                        <a href="{% url 'addto_cart' prod.id  %}?next={{ request.path }}" class="add-to-cart text-center py-2 mr-1"><span>Add to cart <i class="ion-ios-cart ml-1"></i></span></a>
+                                        {% endif %}
+                                        <a href="#" class="buy-now text-center py-2">Add to wish<span><i class="ion-ios-heart ml-1"></i></span></a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
+                <div class="row mt-5">
+                    <div class="col text-center">
+                        <div class="block-27">
+                            <ul>
+                                <li><a href="#">&lt;</a></li>
+                                <li class="active"><span>1</span></li>
+                                <li><a href="#">2</a></li>
+                                <li><a href="#">3</a></li>
+                                <li><a href="#">4</a></li>
+                                <li><a href="#">5</a></li>
+                                <li><a href="#">&gt;</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-	
-		    			<div class="col-sm-12 col-md-12 col-lg-4  d-flex">
-
-				
-		    		</div>
-		    		<div class="row mt-5">
-		          <div class="col text-center">
-		            <div class="block-27">
-		              <ul>
-		                <li><a href="#">&lt;</a></li>
-		                <li class="active"><span>1</span></li>
-		                <li><a href="#">2</a></li>
-		                <li><a href="#">3</a></li>
-		                <li><a href="#">4</a></li>
-		                <li><a href="#">5</a></li>
-		                <li><a href="#">&gt;</a></li>
-		              </ul>
-		            </div>
-		          </div>
-		        </div>
-		    	</div>
-
-		    	<div class="col-md-4 col-lg-2">
-		    		<div class="sidebar">
+            <div class="col-md-4 col-lg-2">
+                <div class="sidebar">
+                    <!-- Your existing sidebar content --><div class="sidebar">
 							<div class="sidebar-box-2">
 								<h2 class="heading">Filter</h2>
 								<div class="fancy-collapse-panel">
@@ -122,7 +120,7 @@
                              </div>
                          </div>
                      </div>
-                     <!-- <div class="panel panel-default">
+                     <div class="panel panel-default">
                          <div class="panel-heading" role="tab" id="headingFour">
                              <h4 class="panel-title">
                                  <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseThree">Size
@@ -139,7 +137,7 @@
                                  </ul>
                              </div>
                          </div>
-                     </div> -->
+                     </div>
                   </div>
                </div>
 							</div>
@@ -184,10 +182,11 @@
 		            </form>
 							</div>
 						</div>
-    			</div>
-    		</div>
-    	</div>
-    </section>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 		
 		<section class="ftco-gallery">
     	<div class="container">
