--- a/ecom/static/css/style.css
+++ b/ecom/static/css/style.css
@@ -3347,6 +3347,7 @@ input[type="button"].btn-block {
     pointer-events: none;
     cursor: default; }
 
+
 .nav-tabs {
   border-bottom: 1px solid #dee2e6; }
   .nav-tabs .nav-item {
@@ -8896,8 +8897,10 @@ h1, h2, h3, h4, h5,
       -ms-transition: all 1s ease;
       transition: all 1s ease; }
   .product .img {
+
     display: block;
-    height: 500px; }
+    /* height: 500px;  */
+}
   .product .icon {
 
     width: 60px;
@@ -10899,4 +10902,12 @@ overflow: hidden;
   object-fit: cover;
 width: 100%;
 height: 100%;
+}
+
+/* .hgt{
+  bottom: 0px !important;
+
+} */
+.scs{
+margin-top: -70px ;
 }
