--- a/ecom/templates/admin/admhome.html
+++ b/ecom/templates/admin/admhome.html
@@ -7,6 +7,7 @@
     <div class="row">  
         <div class="col-lg-8 col-lg-offset-2">  
             <h1>Dashboard </h1>  
+            {{ request.user }}
          </div>  
     </div>  
 </div>   
