--- a/ecom/templates/login/login.html
+++ b/ecom/templates/login/login.html
@@ -24,15 +24,13 @@
                                         <h6 class=" text-danger"> {{ message }} </h6>
                                     {% endfor %}
                             {% endif %}
-                        <form class="row contact_form" action="/login/" method="post" novalidate="novalidate">
+                        <form class="row contact_form" action="/login/" method="post" >
                         {% csrf_token %}
                             <div class="col-md-12 form-group p_star">
-                                <input type="email" class="form-control" id="email" name="email" value=""
-                                    placeholder="email">
+                                <input type="email" class="form-control" id="email" name="email" value="" placeholder="email" required >
                             </div>
                             <div class="col-md-12 form-group p_star">
-                                <input type="password" class="form-control" id="password" name="password" value=""
-                                    placeholder="password">
+                                <input type="password" class="form-control" id="password" name="password" value="" placeholder="password" required >
                             </div>
                             <div class="col-md-12 form-group">
                                 {% comment %} <div class="creat_account d-flex align-items-center">
@@ -43,7 +41,7 @@
                                     Login
                                 </button>
                                 </form>
-                                <a class="lost_pass"   href="/verifyreg/">forget password?</a>
+                                <a class="lost_pass"   href="#forgetpass" data-toggle="modal" >forget password?</a>
                     </div>
                         
                 </div>
@@ -51,7 +49,29 @@
         </div>
     </div>
 
- 
+    <div id="forgetpass" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form method="post" action="/forget_pass/">
+                {% csrf_token %}
+                    <div class="modal-header">						
+                        <h4 class="modal-title">Reset your password ?</h4>
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    </div>
+                    <div class="modal-body">					
+                        <div class="form-group">
+                            <label> enter your email</label>
+                            <input type="text"  name="email" class="form-control" required>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+                        <input type="submit" class="btn btn-primary" value="submit">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
     
 
 {% include 'footer.html' %}
